--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=packagemapper
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.check-template-location=false
-repository.directory=C:/Users/User/Desktop/Projects/PackageMapper/repositories
+spring.config.import=optional:file:.env[.properties]
+repository.directory=${REPOSITORY_DIRECTORY}
+logs.directory=${LOGS_DIRECTORY}
+analysis.directory=${ANALYSIS_DIRECTORY}
